--- a/contact.html
+++ b/contact.html
@@ -7,9 +7,12 @@
 
 	<link rel="stylesheet" type="text/css" href="style.css">
 
+	<meta name="viewport" content="initial-scale=1.0">	
+
 </head>
 
 <body>
+
 
 <div id="wrapper">
 
