--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 
 	<link rel="stylesheet" type="text/css" href="style.css">
+
+	<meta name="viewport" content="initial-scale=1.0">
+
 </head>
 
 <body>
