--- a/portfolio.html
+++ b/portfolio.html
@@ -7,6 +7,8 @@
 
 	<link rel="stylesheet" type="text/css" href="style.css">
 
+	<meta name="viewport" content="initial-scale=1.0">
+
 </head>
 
 <body>
