added media query code

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
 	<title>LVMAGEE</title>
 
-	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/reset1.css">
 
 	<link rel="stylesheet" type="text/css" href="style.css">
 
-	<meta name="viewport" content="initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 </head>
 
@@ -35,20 +35,6 @@
 
 	<div id="Content">
 
-			<nav>
-
-			<h3>Connect with Me</h3>
-				<ul>
-
-		        <a href="https://github.com/" target="_blank"><img src="assets/images/git.png"></a>
-
-				<a href="https://www.linkedin.com/in/lisa-magee-06585a65/" target="_blank"><img src="assets/images/link.png"></a>
-
-				<a href="http://stackoverflow.com" target="_blank"><img src="assets/images/stack.png"></a>
-
-
-				</ul>
-			</nav>
 
 		<div id="words">
 
@@ -68,6 +54,22 @@
 
 
 	</div>
+
+	
+			<nav>
+
+			<h3>Connect with Me</h3>
+				<ul>
+
+		        <a href="https://github.com/" target="_blank"><img src="assets/images/git.png"></a>
+
+				<a href="https://www.linkedin.com/in/lisa-magee-06585a65/" target="_blank"><img src="assets/images/link.png"></a>
+
+				<a href="http://stackoverflow.com" target="_blank"><img src="assets/images/stack.png"></a>
+
+
+				</ul>
+			</nav>
 
 
 
