--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,7 @@
 
 	<link rel="stylesheet" type="text/css" href="style.css">
 
-	<meta name="viewport" content="initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 </head>
 
@@ -35,22 +35,7 @@
 
 	<div id="Content">
 
-			<nav>
 
-			<h3>Connect with Me</h3>
-
-				<ul>
-
-			        <a href="https://github.com/" target="_blank"><img src="assets/images/git.png"></a>
-
-					<a href="https://www.linkedin.com" target="_blank"><img src="assets/images/link.png"></a>
-
-					<a href="http://stackoverflow.com//" target="_blank"><img src="assets/images/stack.png"></a>
-
-
-				</ul>
-
-			</nav>
 
 		<div id="words">
 
@@ -75,6 +60,23 @@
 
 
 	</div>
+
+				<nav>
+
+			<h3>Connect with Me</h3>
+
+				<ul>
+
+			        <a href="https://github.com/" target="_blank"><img src="assets/images/git.png"></a>
+
+					<a href="https://www.linkedin.com" target="_blank"><img src="assets/images/link.png"></a>
+
+					<a href="http://stackoverflow.com//" target="_blank"><img src="assets/images/stack.png"></a>
+
+
+				</ul>
+
+			</nav>
 
 
 
