--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
 
 	<link rel="stylesheet" type="text/css" href="style.css">
 
-	<meta name="viewport" content="initial-scale=1.0">	
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 </head>
 
@@ -36,20 +36,7 @@
 
 	<div id="Content">
 
-			<nav>
-
-				<h3>Connect with Me</h3>
-					<ul>
-
-				        <a href="https://github.com/" target="_blank"><img src="assets/images/git.png"></a>
-
-						<a href="https://www.linkedin.com" target="_blank"><img src="assets/images/link.png"></a>
-
-						<a href="http://stackoverflow.com//" target="_blank"><img src="assets/images/stack.png"></a>
-
-
-					</ul>
-			</nav>
+</nav>
 
 <div id="words">			
 
@@ -85,6 +72,20 @@
 
 	</div>
 
+			<nav>
+
+				<h3>Connect with Me</h3>
+					<ul>
+
+				        <a href="https://github.com/" target="_blank"><img src="assets/images/git.png"></a>
+
+						<a href="https://www.linkedin.com" target="_blank"><img src="assets/images/link.png"></a>
+
+						<a href="http://stackoverflow.com//" target="_blank"><img src="assets/images/stack.png"></a>
+
+
+					</ul>
+			</nav>
 
 
 	<footer>©Copyright 2017 LV Magee</footer>
